# fieldquote

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.githooks/: pre-commit
apps/api/: alembic.ini  pyproject.toml
apps/api/evals/: run_scoping_eval.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_core_schema.py  0002_phase2_assembly_fields.py  0003_phase6_proposals_payments.py  0004_phase7_invoice_statuses.py
apps/api/scripts/: export_openapi.py  export_validation_csv.py  test_rls.sh
apps/api/seeds/: seed_catalog.py  seed_dev.py
apps/api/seeds/catalog/: assemblies_circuits_receptacles.json  assemblies_ev_charger.json  assemblies_fixtures_fans.json  assemblies_generator.json  assemblies_panel_service.json  assemblies_remodel.json  assemblies_repairs.json  assemblies_service_diagnostic.json  assemblies_special_circuits.json  materials.json  modifiers.json  validate_catalog.py
apps/api/src/fieldquote/: __init__.py  main.py
apps/api/src/fieldquote/ai/: providers.py  types.py
apps/api/tests/: conftest.py  test_ai_fixtures.py  test_ai_pipeline.py  test_approval_control.py  test_auth.py  test_catalog_api.py  test_catalog_guard.py  test_domain_api.py  test_estimate_editing_db.py  test_generation_db.py  test_health.py  test_invoices_db.py  test_job_status.py  test_me.py  test_proposal_render.py  test_proposals_db.py  test_rls.py
apps/api/tests/pricing/: catalog_fixture.py  generate_goldens.py  scenarios.py  test_engine.py  test_golden.py  test_properties.py
(+205 files in other folders)
