[project]
name = "fieldquote-api"
version = "0.1.0"
description = "FieldQuote AI backend API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "httpx>=0.28",
    "sentry-sdk[fastapi]>=2.20",
    "redis>=5.2",
    "arq>=0.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "hypothesis>=6.156.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldquote"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["fieldquote"]

[[tool.mypy.overrides]]
module = ["arq.*", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "rls: RLS integration tests requiring a live Postgres (docker)",
    "db: API integration tests requiring a live Postgres (docker)",
]

[tool.coverage.run]
source = ["fieldquote"]
branch = true
